templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"flask-ingress","namespace":"default"},"spec":{"ingressClassName":"nginx","rules":[{"host":"my-flask-app.local","http":{"paths":[{"backend":{"service":{"name":"flask-service","port":{"number":5000}}},"path":"/","pathType":"Prefix"}]}}]}}
    nginx.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: "2025-02-06T17:52:10Z"
  generation: 3
  name: flask-ingress
  namespace: default
  resourceVersion: "813262"
  uid: b9125857-464a-4492-988d-fb8edc0e8d7a
spec:
  ingressClassName: nginx
  rules:
  - host: my-flask-app.local
    http:
      paths:
      - backend:
          service:
            name: my-flask-app
            port:
              number: 5000
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 192.168.49.2
